--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,12 @@
 .bg-custom-green {
   background-color: #71b548 !important;
 }
+.bg-custom-green-op {
+  background-color: rgba(113, 181, 72, 0.5) !important;
+}
+.text-custom-green {
+  color: #003d0f !important;
+}
+.div-custom-beige {
+  background-color: #faf8f3 !important;
+}
