--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -10,3 +10,8 @@
 .div-custom-beige {
   background-color: #faf8f3 !important;
 }
+
+.nav-link img {
+  height: 25px; /* 기존보다 살짝 작게 */
+  margin-right: 8px; /* 아이콘 오른쪽 간격 확보 */
+}
